Remove multiple QMD files and associated HTML documentation to streamline course materials and enhance focus on core content. Update titles in relevant files for consistency.

--- a/01-setup.html
+++ b/01-setup.html
@@ -315,7 +315,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./1-setup.html">Module 1: R Foundations</a></li><li class="breadcrumb-item"><a href="./1-setup.html">1 Setup &amp; intro</a></li></ol></nav>
+        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item">1 Setup &amp; intro</li></ol></nav>
         <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
         </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -374,41 +374,23 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       </div>
       <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./1-setup.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text">1 Setup &amp; intro</span></a>
-  </div>
-</li>
+ <span class="menu-text">1-setup.qmd</span>
+  </li>
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./2-r-lang.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">2 R language</span></a>
-  </div>
-</li>
+ <span class="menu-text">2-r-lang.qmd</span>
+  </li>
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./3-functions.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">3 R Functions</span></a>
-  </div>
-</li>
+ <span class="menu-text">3-functions.qmd</span>
+  </li>
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./4-data.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">4 Data objects</span></a>
-  </div>
-</li>
+ <span class="menu-text">4-data.qmd</span>
+  </li>
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./5-data-frames.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">5 Data frames</span></a>
-  </div>
-</li>
+ <span class="menu-text">5-data-frames.qmd</span>
+  </li>
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./6-data-manipulation.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">6 Data subsetting</span></a>
-  </div>
-</li>
+ <span class="menu-text">6-data-manipulation.qmd</span>
+  </li>
       </ul>
   </li>
         <li class="sidebar-item sidebar-item-section">
@@ -421,23 +403,14 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       </div>
       <ul id="quarto-sidebar-section-3" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./7-question-explore.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">7 Explore data</span></a>
-  </div>
-</li>
+ <span class="menu-text">7-question-explore.qmd</span>
+  </li>
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./8-sampling-dist.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">8 Distributions</span></a>
-  </div>
-</li>
+ <span class="menu-text">8-sampling-dist.qmd</span>
+  </li>
           <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./9-correlation.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">9 Correlation</span></a>
-  </div>
-</li>
+ <span class="menu-text">9-correlation.qmd</span>
+  </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./10-regression.html" class="sidebar-item-text sidebar-link">
@@ -530,7 +503,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <main class="content" id="quarto-document-content">
 
 
-<header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./1-setup.html">Module 1: R Foundations</a></li><li class="breadcrumb-item"><a href="./1-setup.html">1 Setup &amp; intro</a></li></ol></nav>
+<header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
 <h1 class="title">1 Setup &amp; intro</h1>
 </div>
